# genai-resume-app

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
app/: __init__.py
app/api/: routes.py
app/services/: chroma_service.py  openai_service.py  scraping_service.py
app/templates/: base.html  handle_query.html
app/utils/: helper_functions.py
genai_resume_app/: __init__.py
genai_resume_app/api/: routes.py
genai_resume_app/services/: openai_service.py
genai_resume_app/static/: hf.css
genai_resume_app/templates/: get_query.html
genai_resume_app/utils/: helper_functions.py
pdfs/: requirements.txt
