[tool.poetry]
name = "genai_resume_app"
version = "0.1.0"
description = "CPowers interview bot"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
langchain-community = "0.0.13"
langchain = "0.1.1"
langchain-openai = "0.0.2"
python-dotenv = "^1.0.1"
flask-cors = "^4.0.1"
chromadb = "^0.5.0"
pypdf = "^4.2.0"
pydantic-core = "^2.17.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
